<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/my_nd_apps" />

    <Button
        style="@style/RegButton"
        android:onClick="onSpotifyClick"
        android:text="@string/spotify_streamer"/>

    <Button
        style="@style/RegButton"
        android:onClick="onScoresClick"
        android:text="@string/scores_app"/>

    <Button
        style="@style/RegButton"
        android:onClick="onLibraryClick"
        android:text="@string/library_app"/>

    <Button
        style="@style/RegButton"
        android:onClick="onBuildItClick"
        android:text="@string/build_it_bigger"/>

    <Button
        style="@style/RegButton"
        android:onClick="onXYZClick"
        android:text="@string/xyz_reader"/>

    <Button
        style="@style/CapButton"
        android:onClick="onCapstoneClick"
        android:text="@string/capstone" />

</LinearLayout>
